Update publish params

--- a/packages/electron-webpack/package.json
+++ b/packages/electron-webpack/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "electron-webpack",
+  "name": "@nzxt/electron-webpack",
   "version": "2.8.2",
   "license": "MIT",
   "author": "Vladimir Krivosheev <develar@gmail.com>",
